# gitalong

./: .env.example  .gitalong.json  .gitignore  .pylintrc  .readthedocs.yaml  CLAUDE.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  gitalong-python.sublime-project  gitalong.sublime-project  gitarmony-python.sublime-project  pyproject.toml  pyrightconfig.json  setup.py  submit_build.sh  upload_build.sh
.github/: FUNDING.yml
.github/workflows/: cd.yaml  cd.yml  ci.yaml  ci.yml
Formula/: gitalong.rb.template
docs/source/: conf.py  index.rst
gitalong/: __info__.py  __init__.py  batch.py  cli.py  commit.py  contexts.py  enums.py  exceptions.py  functions.py  gitalong.py  repository.py  store.py
gitalong/resources/: gitignore
gitalong/resources/hooks/: post-applypatch  post-checkout  post-commit  post-rewrite  pre-commit
gitalong/stores/: git_store.py  jsonbin_store.py  rest_store.py
gitarmony/: __info__.py  __init__.py  change_set.py  enums.py  functions.py  gitarmony.py  spread.py
gitarmony/resources/: gitignore
gitarmony/resources/actions/github/: run-gitarmony-sync.yml  synchronize-change-set.yml
gitarmony/resources/hooks/: post-checkout  post-commit  post-rewrite  pre-push
scripts/: homebrew_pr.sh  submit_build.sh  upload_build.sh
src/: cli.rs  commands.rs  commit.rs  config.rs  error.rs  hooks.rs  lib.rs  main.rs  repository.rs  spread.rs
src/operations/: claim.rs  mod.rs  permissions.rs  status.rs  update.rs
src/resources/hooks/: post-applypatch  post-checkout  post-commit
src/store/: git.rs  jsonbin.rs  mod.rs
tests/: __init__.py  cases.py  cli_config.rs  cli_setup.rs  cli_status.rs  cli_version.rs  example.py  functions.py  gitalong_case.py  lifecycle.rs  test_cli.py  test_example.py  test_functions.py  test_git_store.py  test_gitalong.py  test_gitarmony.py  test_jsonbin_store.py  test_local_files.py  test_repository.py  test_rest_store.py
tests/common/: mod.rs
